added dropbox link for bagfiles to readme

--- a/README
+++ b/README
@@ -16,4 +16,8 @@ in `pcl_ws`:
 change to your default workspace and continue coding :)
 
 
-  
+# Data
+the following dropbox link contains several bagfiles and other data
+not stored on the repository:
+
+https://www.dropbox.com/sh/dxuoppjfbenojlf/AABIntn4Zq49OTNQIXcSU-E3a?dl=0
